--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,27 @@
 .main-color-box {
     width: 300px;
-    height: 205px;
+    height: 200px;
     border: 1px solid black;
     border-radius: 15px;
-    margin: 20px auto;
+    margin: 0px auto;
     display: block;
+}
+
+.side-color-box {
+    width: 75px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 8px;
+    display: block;
+}
+
+.meme-box {
+  width: 300px;
+  height: 182px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 0px auto;
+  display: block;
 }
 
 .center-text {
@@ -12,7 +29,7 @@
 }
 
 button {
-  margin-top: 5px;
+  margin-top: 15px;
   margin-left: 2px;
   margin-right: 2px;
   padding: 10px 16px;
