--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,6 +86,10 @@
       </form>
     </div>
     
+    <div style="margin: 15px;">
+      <%= link_to "Color Pairs Ranker", rank_color_pairs_path %>
+    </div>
+    
     <!-- Message for max votes, dependent on which vote is maxed. -->
     <% if @message %>
       <p style="color: red;"><%= @message %></p>
