Change rails set up for pairs ranking web page. Add view and controller for pairs ranking web page. Edit routes to incorporate pairs ranking page. For index.html.erb and home_controller.rb, add reset flash message transition. Edit vote messages and reset messages. Remove new color generation for reset button. Add functionality to only allow reset if votes exist in either nice or ugly colors.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,18 +1,36 @@
 .main-color-box {
-    width: 300px;
-    height: 200px;
-    border: 1px solid black;
-    border-radius: 15px;
-    margin: 0px auto;
-    display: block;
+  width: 300px;
+  height: 200px;
+  border: 1px solid black;
+  border-radius: 15px;
+  margin: 0px auto;
+  display: block;
 }
 
 .side-color-box {
-    width: 75px;
-    height: 50px;
-    border: 1px solid black;
-    border-radius: 8px;
-    display: block;
+  width: 75px;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 8px;
+  display: block;
+}
+
+.pair-color-box {
+  width: 130px;
+  height: 200px;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.pair-side-color-box {
+  width: 75px;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 8px;
+  display: block;
 }
 
 .meme-box {
