--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,27 +17,54 @@
 }
 
 .pair-color-box {
-  width: 130px;
+  width: 150px;
   height: 200px;
-  border: 1px solid black;
-  border-radius: 15px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-radius: 0px;
   margin: 0px auto;
   margin-top: 15px;
   display: flex;
   flex-direction: row;
 }
 
+.pair-color-box-left {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-right: 0px solid black;
+  border-left: 1px solid black;
+} 
+.pair-color-box-right {
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-left: 0px solid black;
+  border-right: 1px solid black;
+}
+
 .pair-side-color-box {
-  width: 75px;
-  height: 50px;
+  width: 90px;
+  height: 120px;
   border: 1px solid black;
-  border-radius: 8px;
+  border-radius: 0px;
   display: block;
+}
+.pair-side-color-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-right: 0px solid black;
+  border-left: 1px solid black;
+}
+
+.pair-side-color-right {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-left: 0px solid black;
+  border-right: 1px solid black;
 }
 
 .meme-box {
   width: 300px;
-  height: 182px;
+  height: 196.5px;
   border: 1px solid black;
   border-radius: 15px;
   margin: 0px auto;
