--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,11 +9,11 @@
 }
 
 .side-color-box {
-  width: 75px;
-  height: 50px;
+  width: 180px;
+  height: 120px;
   border: 1px solid black;
-  border-radius: 8px;
-  display: block;
+  border-radius: 10px;
+  display: flex;
 }
 
 .pair-color-box {
@@ -102,7 +102,7 @@ button {
 
 body {
   font-family: sans-serif;
-  background-color: #E8E8E8
+  background-color: #E6E6E6
 }
 
 
